--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -17,6 +17,15 @@ jobs:
       run:
         shell: bash -l {0}
 
+    env:
+      MPI: no
+      OMP: no
+      PHDF5: no
+      DAGMC: no
+      EVENT: no
+      VECTFIT: no
+      LIBMESH: no
+
     steps:
       - uses: actions/checkout@v3
 
@@ -42,6 +51,7 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
+            ~/openmc_src
             ~/endfb71_hdf5
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -55,6 +65,27 @@ jobs:
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
         run: $GITHUB_WORKSPACE/scripts/ci/openmc-xs.bash
       
+      - name: OpenMC dependencies
+        run: |
+          sudo apt -y update
+          sudo apt install -y libhdf5-dev
+
+      - name: Download OpenMC
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        uses: actions/checkout@v3
+        with: 
+          repository: openmc-dev/openmc
+          path: openmc
+          submodules: recursive
+          
+      - name: Build OpenMC from source if no cache if found
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        run: $GITHUB_WORKSPACE/tools/ci/build-openmc.sh
+
+      - name: Restore OpenMC source build from cache
+        if: steps.dependencies-cache.outputs.cache-hit == 'true'
+        run: $GITHUB_WORKSPACE/tools/ci/restore-openmc.sh
+          
       - name: Install SaltProc
         run: pip install .
 
@@ -98,6 +129,20 @@ jobs:
       - name: Update environment
         run: mamba env update -n saltproc-doc-env -f doc/doc-environment.yml
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
+
+      - name: Download OpenMC
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        uses: actions/checkout@v3
+        with: 
+          repository: openmc-dev/openmc
+          path: openmc
+
+      - name: Build OpenMC API
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+        run: |
+          cd openmc
+          pip install .
+          cd ../
 
      - name: Install SaltProc
         run: pip install .
