fix fuel example

--- a/examples/msbr/mats/fuel_endfb71.ini
+++ b/examples/msbr/mats/fuel_endfb71.ini
@@ -1,9 +1,424 @@
 % Material compositions (after 0.000000 days)
 
-mat  fuel  -3.350000000E+00 burn 1 fix 09c  900 vol 4.87100E+07
+mat  fuel  -3.350000000E+00 rgb 255 255 0 burn 1 fix 82c  900 vol 4.87100E+07
+            1001.82c  -0.0
+            1002.82c  -0.0
+            1003.82c  -0.0
+            2003.82c  -0.0
+            2004.82c  -0.0
             3006.82c  -3.937496230427713e-06
             3007.82c  -0.07874598711233247
-            9019.82c  -0.45398382534173054
             4009.82c  -0.02255755625117608
+            5010.82c  -0.0
+            5011.82c  -0.0
+            7014.82c  -0.0
+            7015.82c  -0.0
+            8016.82c  -0.0
+            8017.82c  -0.0
+            9019.82c  -0.45398382534173054
+           11022.82c  -0.0
+           11023.82c  -0.0
+           12024.82c  -0.0
+           12025.82c  -0.0
+           12026.82c  -0.0
+           13027.82c  -0.0
+           14028.82c  -0.0
+           14029.82c  -0.0
+           14030.82c  -0.0
+           15031.82c  -0.0
+           16032.82c  -0.0
+           16033.82c  -0.0
+           16034.82c  -0.0
+           16036.82c  -0.0
+           17035.82c  -0.0
+           17037.82c  -0.0
+           18036.82c  -0.0
+           18038.82c  -0.0
+           18040.82c  -0.0
+           19039.82c  -0.0
+           19040.82c  -0.0
+           19041.82c  -0.0
+           20040.82c  -0.0
+           20042.82c  -0.0
+           20043.82c  -0.0
+           20044.82c  -0.0
+           20046.82c  -0.0
+           20048.82c  -0.0
+           21045.82c  -0.0
+           22046.82c  -0.0
+           22047.82c  -0.0
+           22048.82c  -0.0
+           22049.82c  -0.0
+           22050.82c  -0.0
+           23050.82c  -0.0
+           23051.82c  -0.0
+           24050.82c  -0.0
+           24052.82c  -0.0
+           24053.82c  -0.0
+           24054.82c  -0.0
+           25055.82c  -0.0
+           26054.82c  -0.0
+           26056.82c  -0.0
+           26057.82c  -0.0
+           26058.82c  -0.0
+           27058.82c  -0.0
+           27458.82c  -0.0
+           27059.82c  -0.0
+           28058.82c  -0.0
+           28059.82c  -0.0
+           28060.82c  -0.0
+           28061.82c  -0.0
+           28062.82c  -0.0
+           28064.82c  -0.0
+           29063.82c  -0.0
+           29065.82c  -0.0
+           30064.82c  -0.0
+           30065.82c  -0.0
+           30066.82c  -0.0
+           30067.82c  -0.0
+           30068.82c  -0.0
+           30070.82c  -0.0
+           31069.82c  -0.0
+           31071.82c  -0.0
+           32070.82c  -0.0
+           32072.82c  -0.0
+           32073.82c  -0.0
+           32074.82c  -0.0
+           32076.82c  -0.0
+           33074.82c  -0.0
+           33075.82c  -0.0
+           34074.82c  -0.0
+           34076.82c  -0.0
+           34077.82c  -0.0
+           34078.82c  -0.0
+           34079.82c  -0.0
+           34080.82c  -0.0
+           34082.82c  -0.0
+           35079.82c  -0.0
+           35081.82c  -0.0
+           36078.82c  -0.0
+           36080.82c  -0.0
+           36082.82c  -0.0
+           36083.82c  -0.0
+           36084.82c  -0.0
+           36085.82c  -0.0
+           36086.82c  -0.0
+           37085.82c  -0.0
+           37086.82c  -0.0
+           37087.82c  -0.0
+           38084.82c  -0.0
+           38086.82c  -0.0
+           38087.82c  -0.0
+           38088.82c  -0.0
+           38089.82c  -0.0
+           38090.82c  -0.0
+           39089.82c  -0.0
+           39090.82c  -0.0
+           39091.82c  -0.0
+           40090.82c  -0.0
+           40091.82c  -0.0
+           40092.82c  -0.0
+           40093.82c  -0.0
+           40094.82c  -0.0
+           40095.82c  -0.0
+           40096.82c  -0.0
+           41093.82c  -0.0
+           41094.82c  -0.0
+           41095.82c  -0.0
+           42092.82c  -0.0
+           42094.82c  -0.0
+           42095.82c  -0.0
+           42096.82c  -0.0
+           42097.82c  -0.0
+           42098.82c  -0.0
+           42099.82c  -0.0
+           42100.82c  -0.0
+           43099.82c  -0.0
+           44096.82c  -0.0
+           44098.82c  -0.0
+           44099.82c  -0.0
+           44100.82c  -0.0
+           44101.82c  -0.0
+           44102.82c  -0.0
+           44103.82c  -0.0
+           44104.82c  -0.0
+           44105.82c  -0.0
+           44106.82c  -0.0
+           45103.82c  -0.0
+           45105.82c  -0.0
+           46102.82c  -0.0
+           46104.82c  -0.0
+           46105.82c  -0.0
+           46106.82c  -0.0
+           46107.82c  -0.0
+           46108.82c  -0.0
+           46110.82c  -0.0
+           47107.82c  -0.0
+           47109.82c  -0.0
+           47510.82c  -0.0
+           47111.82c  -0.0
+           48106.82c  -0.0
+           48108.82c  -0.0
+           48110.82c  -0.0
+           48111.82c  -0.0
+           48112.82c  -0.0
+           48113.82c  -0.0
+           48114.82c  -0.0
+           48515.82c  -0.0
+           48116.82c  -0.0
+           49113.82c  -0.0
+           49115.82c  -0.0
+           50112.82c  -0.0
+           50113.82c  -0.0
+           50114.82c  -0.0
+           50115.82c  -0.0
+           50116.82c  -0.0
+           50117.82c  -0.0
+           50118.82c  -0.0
+           50119.82c  -0.0
+           50120.82c  -0.0
+           50122.82c  -0.0
+           50123.82c  -0.0
+           50124.82c  -0.0
+           50125.82c  -0.0
+           50126.82c  -0.0
+           51121.82c  -0.0
+           51123.82c  -0.0
+           51124.82c  -0.0
+           51125.82c  -0.0
+           51126.82c  -0.0
+           52120.82c  -0.0
+           52122.82c  -0.0
+           52123.82c  -0.0
+           52124.82c  -0.0
+           52125.82c  -0.0
+           52126.82c  -0.0
+           52527.82c  -0.0
+           52128.82c  -0.0
+           52529.82c  -0.0
+           52130.82c  -0.0
+           52132.82c  -0.0
+           53127.82c  -0.0
+           53129.82c  -0.0
+           53130.82c  -0.0
+           53131.82c  -0.0
+           53135.82c  -0.0
+           54123.82c  -0.0
+           54124.82c  -0.0
+           54126.82c  -0.0
+           54128.82c  -0.0
+           54129.82c  -0.0
+           54130.82c  -0.0
+           54131.82c  -0.0
+           54132.82c  -0.0
+           54133.82c  -0.0
+           54134.82c  -0.0
+           54135.82c  -0.0
+           54136.82c  -0.0
+           55133.82c  -0.0
+           55134.82c  -0.0
+           55135.82c  -0.0
+           55136.82c  -0.0
+           55137.82c  -0.0
+           56130.82c  -0.0
+           56132.82c  -0.0
+           56133.82c  -0.0
+           56134.82c  -0.0
+           56135.82c  -0.0
+           56136.82c  -0.0
+           56137.82c  -0.0
+           56138.82c  -0.0
+           56140.82c  -0.0
+           57138.82c  -0.0
+           57139.82c  -0.0
+           57140.82c  -0.0
+           58136.82c  -0.0
+           58138.82c  -0.0
+           58139.82c  -0.0
+           58140.82c  -0.0
+           58141.82c  -0.0
+           58142.82c  -0.0
+           58143.82c  -0.0
+           58144.82c  -0.0
+           59141.82c  -0.0
+           59142.82c  -0.0
+           59143.82c  -0.0
+           60142.82c  -0.0
+           60143.82c  -0.0
+           60144.82c  -0.0
+           60145.82c  -0.0
+           60146.82c  -0.0
+           60147.82c  -0.0
+           60148.82c  -0.0
+           60150.82c  -0.0
+           61147.82c  -0.0
+           61148.82c  -0.0
+           61548.82c  -0.0
+           61149.82c  -0.0
+           61151.82c  -0.0
+           62144.82c  -0.0
+           62147.82c  -0.0
+           62148.82c  -0.0
+           62149.82c  -0.0
+           62150.82c  -0.0
+           62151.82c  -0.0
+           62152.82c  -0.0
+           62153.82c  -0.0
+           62154.82c  -0.0
+           63151.82c  -0.0
+           63152.82c  -0.0
+           63153.82c  -0.0
+           63154.82c  -0.0
+           63155.82c  -0.0
+           63156.82c  -0.0
+           63157.82c  -0.0
+           64152.82c  -0.0
+           64153.82c  -0.0
+           64154.82c  -0.0
+           64155.82c  -0.0
+           64156.82c  -0.0
+           64157.82c  -0.0
+           64158.82c  -0.0
+           64160.82c  -0.0
+           65159.82c  -0.0
+           65160.82c  -0.0
+           66156.82c  -0.0
+           66158.82c  -0.0
+           66160.82c  -0.0
+           66161.82c  -0.0
+           66162.82c  -0.0
+           66163.82c  -0.0
+           66164.82c  -0.0
+           67165.82c  -0.0
+           67566.82c  -0.0
+           68162.82c  -0.0
+           68164.82c  -0.0
+           68166.82c  -0.0
+           68167.82c  -0.0
+           68168.82c  -0.0
+           68170.82c  -0.0
+           69168.82c  -0.0
+           69169.82c  -0.0
+           69170.82c  -0.0
+           71175.82c  -0.0
+           71176.82c  -0.0
+           72174.82c  -0.0
+           72176.82c  -0.0
+           72177.82c  -0.0
+           72178.82c  -0.0
+           72179.82c  -0.0
+           72180.82c  -0.0
+           73180.82c  -0.0
+           73181.82c  -0.0
+           73182.82c  -0.0
+           74180.82c  -0.0
+           74182.82c  -0.0
+           74183.82c  -0.0
+           74184.82c  -0.0
+           74186.82c  -0.0
+           75185.82c  -0.0
+           75187.82c  -0.0
+           77191.82c  -0.0
+           77193.82c  -0.0
+           79197.82c  -0.0
+           80196.82c  -0.0
+           80198.82c  -0.0
+           80199.82c  -0.0
+           80200.82c  -0.0
+           80201.82c  -0.0
+           80202.82c  -0.0
+           80204.82c  -0.0
+           81203.82c  -0.0
+           81205.82c  -0.0
+           82204.82c  -0.0
+           82206.82c  -0.0
+           82207.82c  -0.0
+           82208.82c  -0.0
+           83209.82c  -0.0
+           88223.82c  -0.0
+           88224.82c  -0.0
+           88225.82c  -0.0
+           88226.82c  -0.0
+           89225.82c  -0.0
+           89226.82c  -0.0
+           89227.82c  -0.0
+           90227.82c  -0.0
+           90228.82c  -0.0
+           90229.82c  -0.0
+           90230.82c  -0.0
+           90231.82c  -0.0
            90232.82c  -0.4355946342818605
+           90233.82c  -0.0
+           90234.82c  -0.0
+           91229.82c  -0.0
+           91230.82c  -0.0
+           91231.82c  -0.0
+           91232.82c  -0.0
+           91233.82c  -0.0
+           92230.82c  -0.0
+           92231.82c  -0.0
+           92232.82c  -0.0
            92233.82c  -0.009114059516670065
+           92234.82c  -0.0
+           92235.82c  -0.0
+           92236.82c  -0.0
+           92237.82c  -0.0
+           92238.82c  -0.0
+           92239.82c  -0.0
+           92240.82c  -0.0
+           92241.82c  -0.0
+           93234.82c  -0.0
+           93235.82c  -0.0
+           93236.82c  -0.0
+           93237.82c  -0.0
+           93238.82c  -0.0
+           93239.82c  -0.0
+           94236.82c  -0.0
+           94237.82c  -0.0
+           94238.82c  -0.0
+           94239.82c  -0.0
+           94240.82c  -0.0
+           94241.82c  -0.0
+           94242.82c  -0.0
+           94243.82c  -0.0
+           94244.82c  -0.0
+           94246.82c  -0.0
+           95240.82c  -0.0
+           95241.82c  -0.0
+           95242.82c  -0.0
+           95642.82c  -0.0
+           95243.82c  -0.0
+           95244.82c  -0.0
+           95644.82c  -0.0
+           96240.82c  -0.0
+           96241.82c  -0.0
+           96242.82c  -0.0
+           96243.82c  -0.0
+           96244.82c  -0.0
+           96245.82c  -0.0
+           96246.82c  -0.0
+           96247.82c  -0.0
+           96248.82c  -0.0
+           96249.82c  -0.0
+           96250.82c  -0.0
+           97245.82c  -0.0
+           97246.82c  -0.0
+           97247.82c  -0.0
+           97248.82c  -0.0
+           97249.82c  -0.0
+           97250.82c  -0.0
+           98246.82c  -0.0
+           98248.82c  -0.0
+           98249.82c  -0.0
+           98250.82c  -0.0
+           98251.82c  -0.0
+           98252.82c  -0.0
+           98253.82c  -0.0
+           98254.82c  -0.0
+           99251.82c  -0.0
+           99252.82c  -0.0
+           99253.82c  -0.0
+           99254.82c  -0.0
+           99654.82c  -0.0
+           99255.82c  -0.0
+          100255.82c  -0.0
