remove openmc source build from CI

--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -23,15 +23,6 @@ jobs:
       run:
         shell: bash -l {0}
 
-    env:
-      MPI: no
-      OMP: no
-      PHDF5: no
-      DAGMC: no
-      EVENT: no
-      VECTFIT: no
-      LIBMESH: no
-
     steps:
       - uses: actions/checkout@v3
 
@@ -57,8 +48,6 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            ~/openmc_src
-            ~/mcpl_src
             ~/endfb71_hdf5
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -79,20 +68,9 @@ jobs:
 
       - name: Download OpenMC
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
-        with: 
-          repository: openmc-dev/openmc
-          path: openmc
-          submodules: recursive
+        run: |
+          mamba install openmc
 
-      - name: Build OpenMC from source if no cache is found
-        if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        run: $GITHUB_WORKSPACE/tools/ci/build-openmc.sh
-
-      - name: Restore OpenMC source build from cache
-        if: steps.dependencies-cache.outputs.cache-hit == 'true'
-        run: $GITHUB_WORKSPACE/tools/ci/restore-openmc.sh
-          
       - name: Install SaltProc
         run:  pip install .
 
