--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -17,15 +17,6 @@ jobs:
       run:
         shell: bash -l {0}
 
-    env:
-      MPI: no
-      OMP: no
-      PHDF5: no
-      DAGMC: no
-      EVENT: no
-      VECTFIT: no
-      LIBMESH: no
-
     steps:
       - uses: actions/checkout@v3
 
@@ -51,7 +42,6 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            ~/openmc_src
             ~/endfb71_hdf5
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -72,19 +62,8 @@ jobs:
 
       - name: Download OpenMC
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
-        with: 
-          repository: openmc-dev/openmc
-          path: openmc
-          submodules: recursive
-          
-      - name: Build OpenMC from source if no cache if found
-        if: steps.dependencies-cache.outputs.cache-hit != 'true'
-        run: $GITHUB_WORKSPACE/tools/ci/build-openmc.sh
-
-      - name: Restore OpenMC source build from cache
-        if: steps.dependencies-cache.outputs.cache-hit == 'true'
-        run: $GITHUB_WORKSPACE/tools/ci/restore-openmc.sh
+        run: |
+          mamba install openmc
           
       - name: Install SaltProc
         run: pip install .
